blog.linguofeng.com

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
 		<meta http-equiv="pragma" content="no-cache" />
 		<meta http-equiv="cache-control" content="no-cache" />
 		<meta http-equiv="expires" content="0" />
-		<title>{{ page.title }} - Linguofeng's Wiki</title>
+		<title>{{ page.title }} - 林国锋的代码库</title>
 		<meta name="keywords" content="java" />
-		<meta name="description" content="这里是林国锋的个人wiki，用来记录工作学习中用到的数据资料。" />
+		<meta name="description" content="这里是林国锋的开发代码库，用来收集工作学习中常用的代码。" />
 		<link href='http://fonts.googleapis.com/css?family=Mate+SC' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="/assets/style.css" />
 		<link rel="stylesheet" type="text/css" href="/assets/ui.totop.css" />
@@ -22,41 +22,16 @@
 		
 			<div id="sidebar">
 				<div id="menu-nav">
-					<div id="logo"><a href="/">Linguofeng's Wiki</a></div>
+					<div id="logo"><a href="/">林国锋的代码库</a></div>
 					
 					<ul>
-						<li>Development &amp; Design
+						<li>Development
 							<ul>
-								<li><a href="/pages/development-design/actionscript.html">ActionScript</a></li>
-								<li><a href="/pages/development-design/csharp.html">Csharp</a></li>
-								<li><a href="/pages/development-design/database.html">Database</a></li>
-								<li><a href="/pages/development-design/php.html">PHP</a></li>
-								<li><a href="/pages/development-design/python.html">Python</a></li>
-								<li><a href="/pages/development-design/ruby.html">Ruby</a></li>
-								<li><a href="/pages/development-design/web-front-end.html">Web Front-end</a></li>
+								<li><a href="/pages/development/android.html">Android</a></li>
+								<li><a href="/pages/development/java.html">Java</a></li>
 							</ul>
 						</li>
 						
-						<li>Software
-							<ul>
-								<!--<li><a href="/pages/software/android.html">Android</a></li>
-								<li><a href="/pages/software/ios.html">iOS</a></li>-->
-								<li><a href="/pages/software/macos.html">MacOS</a></li>
-								<li><a href="/pages/software/linux.html">Linux</a></li>
-								<li><a href="/pages/software/windows.html">Windows</a></li>
-								<li><a href="/pages/software/sublime-text.html">Sublime Text</a></li>
-							</ul>
-						</li>
-						
-						<li>Other
-							<ul>
-								<!-- <li><a href="/pages/other/articles.html">Articles</a></li> -->
-								<li><a href="/pages/other/open_source_projects.html">Open Source</a></li>
-								<li><a href="/pages/other/references.html">References</a></li>
-								<li><a href="/pages/other/server.html">Server</a></li>
-								<li><a href="/pages/other/web_site.html">Web Site</a></li>
-							</ul>
-						</li>
 					</ul>
 					
 					<ul>
