--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
@@ -8,13 +8,28 @@
 		<title>{{ page.title }} - 林国锋的代码库</title>
 		<meta name="keywords" content="java" />
 		<meta name="description" content="这里是林国锋的开发代码库，用来收集工作学习中常用的代码。" />
-		<link href='http://fonts.googleapis.com/css?family=Mate+SC' rel='stylesheet' type='text/css'>
+		<!-- link href='http://fonts.googleapis.com/css?family=Mate+SC' rel='stylesheet' type='text/css' -->
 		<link rel="stylesheet" type="text/css" href="/assets/style.css" />
+		<!-- link rel="stylesheet" type="text/css" href="/assets/syntax-default.css" / -->
 		<link rel="stylesheet" type="text/css" href="/assets/ui.totop.css" />
 		<script type="text/javascript" src="/assets/jquery.min.js"></script>
 		<script type="text/javascript" src="/assets/waypoints.min.js"></script>
 		<script type="text/javascript" src="/assets/jquery.ui.totop.js"></script>
 		<script type="text/javascript" src="/assets/common.js"></script>
+		
+		<!-- SyntaxHighlighter -->
+		<script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shCore.js"></script>
+	    <script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shBrushXml.js"></script>
+	    <script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shBrushJava.js"></script>
+	    <link type="text/css" rel="stylesheet" href="/assets/SyntaxHighlighter/styles/shCoreDefault.css"/>
+	    <script type="text/javascript">SyntaxHighlighter.all();</script>
+	    <style type="text/css">
+		    .syntaxhighlighter {
+			    width: 750px !important;
+			    overflow: hidden !important;
+			    margin-left: 40px !important;
+			}
+	    </style>
 	</head>
 
 	<body>
@@ -22,13 +37,15 @@
 		
 			<div id="sidebar">
 				<div id="menu-nav">
-					<div id="logo"><a href="/">林国锋的代码库</a></div>
+					<div id="logo"><a href="/">Library</a></div>
 					
 					<ul>
 						<li>Development
 							<ul>
 								<li><a href="/pages/development/android.html">Android</a></li>
 								<li><a href="/pages/development/java.html">Java</a></li>
+								<li><a href="/pages/development/javascript.html">JavaScript</a></li>
+								<li><a href="/pages/development/jquery.html">jQuery</a></li>
 							</ul>
 						</li>
 						
