--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,19 +18,15 @@
 		<script type="text/javascript" src="/assets/common.js"></script>
 		
 		<!-- SyntaxHighlighter -->
-		 
-		<script type="text/javascript" src="https://github.com/alexgorbatchev/SyntaxHighlighter/raw/master/scripts/XRegExp.js"></script>
-        <script type="text/javascript" src="https://github.com/alexgorbatchev/SyntaxHighlighter/raw/master/scripts/shCore.js"></script>
-        <script type="text/javascript" src="https://github.com/alexgorbatchev/SyntaxHighlighter/raw/master/scripts/shBrushXml.js"></script>
-        <script type="text/javascript" src="https://github.com/alexgorbatchev/SyntaxHighlighter/raw/master/scripts/shBrushJava.js"></script>
-		<!-- 
-		<script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shCore.js"></script>
-	    <script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shBrushXml.js"></script>
-	    <script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shBrushJava.js"></script>
-	    <link type="text/css" rel="stylesheet" href="/assets/SyntaxHighlighter/styles/shCore.css"/>
-	    <link type="text/css" rel="stylesheet" href="/assets/SyntaxHighlighter/styles/shCoreDefault.css"/>
-	     -->
-	    <script type="text/javascript">SyntaxHighlighter.all();</script>
+	    <link type="text/css" rel="stylesheet" href="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/styles/shCore.css"/>
+	    <link type="text/css" rel="stylesheet" href="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/styles/shThemeDefault.css"/>
+		<script type="text/javascript" src="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/scripts/shCore.js"></script>
+	    <script type="text/javascript" src="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/scripts/shBrushJava.js"></script>
+	    <script type="text/javascript" src="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/scripts/shBrushXml.js"></script>
+	    <script type="text/javascript">
+	        SyntaxHighlighter.config.clipboardSwf = 'http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/scripts/clipboard.swf';
+	        SyntaxHighlighter.all();
+	    </script>
 	    <style type="text/css">
 		    .syntaxhighlighter {
 			    width: 750px !important;
