--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <script type="text/javascript" src="/assets/common.js"></script>
         
         <!-- SyntaxHighlighter -->
-        <!--link type="text/css" rel="stylesheet" href="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/styles/shCore.css"/>
+        <link type="text/css" rel="stylesheet" href="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/styles/shCore.css"/>
         <link type="text/css" rel="stylesheet" href="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/styles/shThemeEmacs.css"/>
         <script type="text/javascript" src="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/scripts/shCore.js"></script>
         <script type="text/javascript" src="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/scripts/shBrushJava.js"></script>
@@ -27,9 +27,9 @@
         <script type="text/javascript">
             SyntaxHighlighter.config.clipboardSwf = 'http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/scripts/clipboard.swf';
             SyntaxHighlighter.all();
-        </script-->
+        </script>
         
-        <link type="text/css" rel="stylesheet" href="/assets/SyntaxHighlighter/styles/shCore.css"/>
+        <!--link type="text/css" rel="stylesheet" href="/assets/SyntaxHighlighter/styles/shCore.css"/>
         <link type="text/css" rel="stylesheet" href="/assets/SyntaxHighlighter/styles/shThemeEmacs.css"/>
         <script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shCore.js"></script>
         <script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shBrushJava.js"></script>
@@ -37,7 +37,7 @@
         <script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shBrushXml.js"></script>
         <script type="text/javascript">
             SyntaxHighlighter.all();
-        </script>
+        </script-->
          
         <style type="text/css">
             .syntaxhighlighter {
