--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,14 +11,14 @@
         <!-- link href='http://fonts.googleapis.com/css?family=Mate+SC' rel='stylesheet' type='text/css' -->
         <link rel="stylesheet" type="text/css" href="/assets/style.css" />
         <link rel="stylesheet" type="text/css" href="/assets/ui.totop.css" />
-        <!--link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css' -->
+        <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="/assets/jquery.min.js"></script>
         <script type="text/javascript" src="/assets/waypoints.min.js"></script>
         <script type="text/javascript" src="/assets/jquery.ui.totop.js"></script>
         <script type="text/javascript" src="/assets/common.js"></script>
         
         <!-- SyntaxHighlighter -->
-        <link type="text/css" rel="stylesheet" href="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/styles/shCore.css"/>
+        <!--link type="text/css" rel="stylesheet" href="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/styles/shCore.css"/>
         <link type="text/css" rel="stylesheet" href="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/styles/shThemeEmacs.css"/>
         <script type="text/javascript" src="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/scripts/shCore.js"></script>
         <script type="text/javascript" src="http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/scripts/shBrushJava.js"></script>
@@ -27,9 +27,9 @@
         <script type="text/javascript">
             SyntaxHighlighter.config.clipboardSwf = 'http://www.linguofeng.com/wp-content/plugins/syntax-highlighter-and-code-prettifier/scripts/clipboard.swf';
             SyntaxHighlighter.all();
-        </script>
+        </script-->
         
-        <!--link type="text/css" rel="stylesheet" href="/assets/SyntaxHighlighter/styles/shCore.css"/>
+        <link type="text/css" rel="stylesheet" href="/assets/SyntaxHighlighter/styles/shCore.css"/>
         <link type="text/css" rel="stylesheet" href="/assets/SyntaxHighlighter/styles/shThemeEmacs.css"/>
         <script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shCore.js"></script>
         <script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shBrushJava.js"></script>
@@ -37,7 +37,7 @@
         <script type="text/javascript" src="/assets/SyntaxHighlighter/scripts/shBrushXml.js"></script>
         <script type="text/javascript">
             SyntaxHighlighter.all();
-        </script-->
+        </script>
          
         <style type="text/css">
             .syntaxhighlighter {
@@ -64,6 +64,7 @@
                                 <li><a href="/pages/development/android.html">Android</a></li>
                                 <li><a href="/pages/development/java.html">Java</a></li>
                                 <li><a href="/pages/development/java/spring.html">Spring</a></li>
+                                <li><a href="/pages/development/java/WebService.html">WebService</a></li>
                                 <li><a href="/pages/development/javascript.html">JavaScript</a></li>
                                 <li><a href="/pages/development/jquery.html">jQuery</a></li>
                             </ul>
@@ -71,6 +72,13 @@
                         <li>OS
                             <ul>
                                 <li><a href="/pages/os/ubuntu.html">Ubuntu</a></li>
+                            </ul>
+                        </li>
+                        <li>Tools
+                            <ul>
+                                <li><a href="/pages/tools/uml.html">UML</a></li>
+                                <li><a href="/pages/tools/Maven.html">Maven</a></li>
+                                <li><a href="/pages/tools/Ant.html">Ant</a></li>
                             </ul>
                         </li>
                         
