--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,9 @@
 layout: default
 ---
 
-<div id="post">
 {{ content }}
-</div>
 
+<!-- 评论 -->
 <div id="comment">
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
@@ -20,4 +19,19 @@ layout: default
 	    })();
 	</script>
 	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</div>
+
+<br />
+<!-- 上一篇或下一篇文章 -->
+<div class="prev_next post_nav">
+    {% if page.previous.url %}
+    <p class="previous">
+        «&nbsp;<a href="{{ page.previous.url }}" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title | truncatewords: 15 }}</a>
+    </p>
+    {% endif %}
+    {% if page.next.url %}
+    <p class="next">
+        <a href="{{ page.next.url }}" rel="next" title="{{ page.next.title }}">{{ page.next.title | truncatewords: 15 }}</a>&nbsp;»
+    </p>
+    {% endif %}
 </div>
