--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }} - 林国锋的代码库</title>
+    <title>{{ page.title }} - 林国锋个人博客</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="java,android,linux,ubuntu">
     <meta name="author" content="linguofeng@msn.com">
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/index.html">林国锋个人博客</a>
+          <a class="brand" href="/about.html">林国锋个人博客</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="{% if page.title == 'Home' %}active{% endif %}">
@@ -46,7 +46,7 @@
                 <ul class="dropdown-menu">
 			      <li><a href="/pages/tools/Maven.html">Maven - 项目管理工具</a></li>
 			      <li><a href="#">Ant - 项目构建工具</a></li>
-			      <li><a href="#">Something else here</a></li>
+			      <li><a href="#">Git - 项目版本管理工具</a></li>
 			      <li class="divider"></li>
 			      <li><a href="#">Eclipse+Android+Maven</a></li>
 			    </ul>
