--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
               <li class="{% if page.title == 'Home' %}active{% endif %}">
                 <a href="/index.html">Home</a>
               </li>
-              <li class="{% if page.title == 'Archive' or page.category contains 'category' %}active{% endif %}">
+              <li class="{% if page.url contains 'archive' %}active{% endif %}">
                 <a href="/archive.html">Archive</a>
               </li>
               <!-- 页面URL包含android关键字 -->
@@ -45,8 +45,8 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#toolsMenu">开发工具 <b class="caret"></b></a>
                 <ul class="dropdown-menu">
 			      <li><a href="/pages/tools/Maven.html">Maven - 项目管理工具</a></li>
-			      <li><a href="#">Ant - 项目构建工具</a></li>
-			      <li><a href="#">Git - 项目版本管理工具</a></li>
+			      <li><a href="/pages/tools/Ant.html">Ant - 项目构建工具</a></li>
+			      <li><a href="/pages/tools/Git.html">Git - 项目版本管理工具</a></li>
 			      <li class="divider"></li>
 			      <li><a href="#">Eclipse+Android+Maven</a></li>
 			    </ul>
