--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }} - 林国锋个人博客</title>
+    <title>{% if page.title %}{{ page.title }} - {% endif %}林国锋个人博客</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="java,android,linux,ubuntu">
-    <meta name="author" content="linguofeng@msn.com">
+    <meta name="description" content="{{ site.description }}">
+    <meta name="author" content="{{ site.author }}">
 
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
     <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
@@ -47,6 +47,7 @@
 			      <li><a href="/pages/tools/Maven.html">Maven - 项目管理工具</a></li>
 			      <li><a href="/pages/tools/Ant.html">Ant - 项目构建工具</a></li>
 			      <li><a href="/pages/tools/Git.html">Git - 项目版本管理工具</a></li>
+			      <li><a href="/pages/tools/Mylyn.html">Mylyn - 任务管理工具</a></li>
 			      <li class="divider"></li>
 			      <li><a href="#">Eclipse+Android+Maven</a></li>
 			    </ul>
