--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 {{ content }}
 
 <!-- 评论 -->
-<div id="comment">
+<!-- div id="comment">
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
 	    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -19,18 +19,18 @@ layout: default
 	    })();
 	</script>
 	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</div>
+</div -->
 
 <br />
 <!-- 上一篇或下一篇文章 -->
-<div class="prev_next post_nav">
+<div>
     {% if page.previous.url %}
-    <p class="previous">
+    <p style="float: left;">
         «&nbsp;<a href="{{ page.previous.url }}" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title | truncatewords: 15 }}</a>
     </p>
     {% endif %}
     {% if page.next.url %}
-    <p class="next">
+    <p style="float: right;">
         <a href="{{ page.next.url }}" rel="next" title="{{ page.next.title }}">{{ page.next.title | truncatewords: 15 }}</a>&nbsp;»
     </p>
     {% endif %}
