--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,36 +2,12 @@
 layout: default
 ---
 
-{{ content }}
+        {{ content }}
 
-<!-- 评论 -->
-<!-- div id="comment">
-	<div id="disqus_thread"></div>
-	<script type="text/javascript">
-	    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-	    var disqus_shortname = 'linguofengblog'; // required: replace example with your forum shortname
-	
-	    /* * * DON'T EDIT BELOW THIS LINE * * */
-	    (function() {
-	        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-	        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-	        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-	    })();
-	</script>
-	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</div -->
+        {% include disqus.ext %}
 
-<br />
-<!-- 上一篇或下一篇文章 -->
-<div>
-    {% if page.previous.url %}
-    <p style="float: left;">
-        «&nbsp;<a href="{{ page.previous.url }}" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title | truncatewords: 15 }}</a>
-    </p>
-    {% endif %}
-    {% if page.next.url %}
-    <p style="float: right;">
-        <a href="{{ page.next.url }}" rel="next" title="{{ page.next.title }}">{{ page.next.title | truncatewords: 15 }}</a>&nbsp;»
-    </p>
-    {% endif %}
-</div>
+        <!-- 上一篇或下一篇文章 -->
+        <div>
+            <p style="float: left;">«&nbsp;{% if page.previous %}<a href="{{ page.previous.url }}" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title | truncatewords: 15 }}</a>{% else %}没有了{% endif %}</p>
+            <p style="float: right;">{% if page.next %}<a href="{{ page.next.url }}" rel="next" title="{{ page.next.title }}">{{ page.next.title | truncatewords: 15 }}</a>{% else %}没有了{% endif %}&nbsp;»</p>
+        </div>
