--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8">
-    <title>{% if page.title %}{{ page.title }} - {% endif %}林国锋个人博客</title>
+    <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="{{ site.author }}">
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/assets/ico/apple-touch-icon-57-precomposed.png">
   </head>
   
-  <body data-spy="scroll" data-target=".subnav" data-offset="80">
+  <body data-spy="scroll" data-target=".subnav" data-offset="{% if page.offset %}{{ page.offset }}{% else %}80{% endif %}">
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/about.html">林国锋个人博客</a>
+          <a class="brand" href="/about.html">{{ site.title }}</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="{% if page.url contains 'index' %}active{% endif %}">
@@ -38,19 +38,19 @@
                 <a href="/archive.html">Archive</a>
               </li>
               <li class="dropdown{% if page.url contains 'language' %} active{% endif %}" id="languageMenu">
-                  <a class="dropdown-toggle" data-toggle="dropdown" href="#languageMenu">Language <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                      <li><a href="/pages/language/java.html">Java</a></li>
-                      <li><a href="/pages/language/scala.html">Scala</a></li>
-                      <li><a href="/pages/language/ruby.html">Ruby</a></li>
-                      <li><a href="/pages/language/python.html">Python</a></li>
-                      <li><a href="/pages/language/nodejs.html">Nodejs</a></li>
-                      <li><a href="/pages/language/jquery.html">jQuery</a></li>
-                      <li><a href="/pages/language/javascript.html">JavaScript</a></li>
-                      <li><a href="/pages/language/erlang.html">Erlang</a></li>
-                      <li><a href="/pages/language/c.html">C/C++</a></li>
-                      <li><a href="/pages/language/php.html">PHP</a></li>
-                  </ul>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#languageMenu">Language <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/pages/language/java.html">Java</a></li>
+                  <li><a href="/pages/language/scala.html">Scala</a></li>
+                  <li><a href="/pages/language/ruby.html">Ruby</a></li>
+                  <li><a href="/pages/language/python.html">Python</a></li>
+                  <li><a href="/pages/language/nodejs.html">Nodejs</a></li>
+                  <li><a href="/pages/language/jquery.html">jQuery</a></li>
+                  <li><a href="/pages/language/javascript.html">JavaScript</a></li>
+                  <li><a href="/pages/language/erlang.html">Erlang</a></li>
+                  <li><a href="/pages/language/c.html">C/C++</a></li>
+                  <li><a href="/pages/language/php.html">PHP</a></li>
+                </ul>
               </li>
               <li class="divider-vertical"></li>
               <li class="{% if page.url contains 'android' %}active{% endif %}">
@@ -72,10 +72,10 @@
                 </ul>
               </li>
               <li class="dropdown{% if page.url contains 'favorites' %} active{% endif %}" id="siteMenu">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#siteMenu">参考网站 <b class="caret"></b></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#siteMenu">Site <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="/pages/favorites/ruby.html">Ruby类</a></li>
-                  <li><a href="/pages/favorites/eclipse.html">Eclipse类</a></li>
+                  <li><a href="/pages/favorites/ruby.html">About Ruby</a></li>
+                  <li><a href="/pages/favorites/eclipse.html">About Eclipse</a></li>
                   <li class="divider"></li>
                   <li><a href="#">Eclipse+Android+Maven</a></li>
                 </ul>
