--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,12 @@
                   <li><a href="/pages/language/jquery.html">jQuery</a></li>
                   <li><a href="/pages/language/javascript.html">JavaScript</a></li>
                   <li><a href="/pages/language/erlang.html">Erlang</a></li>
-                  <li><a href="/pages/language/c.html">C/C++</a></li>
+                  <li class="dropdown-submenu">
+                    <a href="/pages/language/c.html">C/C++</a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/pages/language/c/Cocos2dx.html">Cocos2d-x 开源游戏引擎</a></li>
+                    </ul>
+                  </li>
                   <li><a href="/pages/language/php.html">PHP</a></li>
                 </ul>
               </li>
@@ -74,8 +79,12 @@
                   <li><a href="#">Eclipse+Android+Maven</a></li>
                 </ul>
               </li>
-              <li class="{% if page.url contains 'android' %}active{% endif %}">
-                <a href="/pages/development/android.html">Android</a>
+              <li class="dropdown{% if page.url contains 'android' %} active{% endif %}">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Android <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/pages/development/android/NDK.html">NDK - 交叉编译工具链</a></li>
+                  <li><a href="/pages/development/android/dialog.html">Dialog - 对话框控件</a></li>
+                </ul>
               </li>
             </ul>
           </div>
