--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,7 @@
                   <li class="dropdown-submenu">
                     <a href="/pages/language/c.html">C/C++</a>
                     <ul class="dropdown-menu">
+                      <li><a href="/pages/language/c/CPP.html">C++ 基础</a></li>
                       <li><a href="/pages/language/c/Cocos2dx.html">Cocos2d-x 开源游戏引擎</a></li>
                     </ul>
                   </li>
