--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,7 @@
                   <li><a href="/pages/tools/Mylyn.html">Mylyn - 任务管理工具</a></li>
                   <li><a href="/pages/tools/vim.html">Vim - 很强大的文本编辑器</a></li>
                   <li><a href="/pages/tools/Emacs.html">Emacs - 很强大的文本编辑器</a></li>
+                  <li><a href="#">Mqtt - IBM消息推送</a></li>
                   <li class="divider"></li>
                   <li><a href="#">Eclipse+Android+Maven</a></li>
                 </ul>
