--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,7 @@
                   <li><a href="/pages/language/jquery.html">jQuery</a></li>
                   <li><a href="/pages/language/javascript.html">JavaScript</a></li>
                   <li><a href="/pages/language/erlang.html">Erlang</a></li>
+                  <li><a href="/pages/language/go.html">Go</a></li>
                   <li class="dropdown-submenu">
                     <a href="/pages/language/c.html">C/C++</a>
                     <ul class="dropdown-menu">
