--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
                   <li><a href="/pages/language/jquery.html">jQuery</a></li>
                   <li><a href="/pages/language/javascript.html">JavaScript</a></li>
                   <li><a href="/pages/language/erlang.html">Erlang</a></li>
-                  <li><a href="/pages/language/go.html">Go</a></li>
+                  <li><a href="/pages/language/go.html">Golang</a></li>
                   <li class="dropdown-submenu">
                     <a href="/pages/language/c.html">C/C++</a>
                     <ul class="dropdown-menu">
@@ -65,9 +65,12 @@
                   <li><a href="/pages/tools/Maven.html">Maven - 项目管理工具</a></li>
                   <li><a href="/pages/tools/Ant.html">Ant - 项目构建工具</a></li>
                   <li><a href="/pages/tools/Git.html">Git - 项目版本管理工具</a></li>
+                  <li><a href="/pages/tools/svn.html">Svn - 项目版本管理工具</a></li>
                   <li><a href="/pages/tools/Mylyn.html">Mylyn - 任务管理工具</a></li>
                   <li><a href="/pages/tools/vim.html">Vim - 很强大的文本编辑器</a></li>
                   <li><a href="/pages/tools/Emacs.html">Emacs - 很强大的文本编辑器</a></li>
+                  <li><a href="/pages/tools/rsync.html">rsync - 很强大的文件同步备份工具</a></li>
+                  <li><a href="/pages/tools/SublimeText.html">Sublime Text - 很强大的文本编辑器</a></li>
                   <li><a href="#">Mqtt - IBM消息推送</a></li>
                   <li class="divider"></li>
                   <li><a href="#">Eclipse+Android+Maven</a></li>
