增加Homebrew工具的介绍

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,6 +75,9 @@
                   <li><a href="#">Mqtt - IBM消息推送</a></li>
                   <li class="divider"></li>
                   <li><a href="#">Eclipse+Android+Maven</a></li>
+                  <li class="divider"></li>
+                  <li class="nav-header">OS X (Mac OS X)</li>
+                  <li><a href="/pages/tools/Homebrew.html">Homebrew - 很强大软件包管理器</a></li>
                 </ul>
               </li>
               <li class="dropdown{% if page.url contains 'favorites' %} active{% endif %}">
